[MOD][ header edt

--- a/oe_kemexon_custom/report/aged_balance_report.xml
+++ b/oe_kemexon_custom/report/aged_balance_report.xml
@@ -45,23 +45,23 @@
                                             <td>
                                                 <span t-esc="invoice.get('due_days')"/>
                                             </td>
-                                            <td>
-                                                <span style="text-align:right;" t-esc="invoice.get('amount_total')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
+                                            <td style="text-align:right;">
+                                                <span  t-esc="invoice.get('amount_total')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
-                                            <td>
-                                                <span style="text-align:right;" t-esc="invoice.get('amount_due')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
+                                            <td style="text-align:right;">
+                                                <span  t-esc="invoice.get('amount_due')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
-                                            <td>
+                                            <td style="text-align:right;">
                                                 <span t-esc="invoice.get('zero_thirty')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
-                                            <td>
-                                                <span style="text-align:right;" t-esc="invoice.get('thirtyone_sixty')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
+                                            <td style="text-align:right;">
+                                                <span  t-esc="invoice.get('thirtyone_sixty')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
-                                            <td>
-                                                <span style="text-align:right;" t-esc="invoice.get('sixteeone_nineteen')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
+                                            <td style="text-align:right;">
+                                                <span  t-esc="invoice.get('sixteeone_nineteen')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
-                                            <td>
-                                                <span  style="text-align:right;" t-esc="invoice.get('nineteen_above')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
+                                            <td style="text-align:right;">
+                                                <span   t-esc="invoice.get('nineteen_above')"  t-options='{"widget": "monetary", "display_currency": invoice.get("currency_id")}'/>
                                             </td>
 
                                         </tr>
@@ -74,24 +74,24 @@
                                         <td/>
                                         <td/>
 
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_amount_total')"
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_amount_total')"
                                                       t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_amount_due')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_amount_due')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_zero_thirty')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_zero_thirty')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_thirtyone_sixty')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_thirtyone_sixty')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_sixteeone_nineteen')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_sixteeone_nineteen')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
-                                        <td>
-                                            <span style="text-align:right;" t-esc="o.get_invoice_details().get('total_nineteen_above')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
+                                        <td style="text-align:right;">
+                                            <span  t-esc="o.get_invoice_details().get('total_nineteen_above')" t-options='{"widget": "monetary", "display_currency": o.get_invoice_details().get("usd_currency")}'/>
                                         </td>
                                     </tr>
 
