--- a/oe_kemexon_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemexon_custom/report/pro-forma_invoice_template.xml
@@ -10,6 +10,7 @@
                 </center>
                 <div style="border: 2px solid black;"/>
                 <br/>
+                <br/>
                 <div class="row">
                     <div class="col-4">
                         <div class="row">
@@ -17,14 +18,16 @@
                             <span t-field="doc.name"/>
                             <br/>
                             <strong>Deal Ref :</strong>
-                            <span class="m-0" t-field="doc.deal_ref" t-options='{"format": "MM/dd/yyyy"}'/>
+                            <span class="m-0" t-field="doc.deal_ref"
+                                  t-options="{&quot;format&quot;: &quot;MM/dd/yyyy&quot;}"/>
                         </div>
                     </div>
                     <div class="col-4"/>
                     <div class="col-4">
                         <div class="row">
                             <strong>Date :</strong>
-                            <span class="m-0" t-field="doc.date_order" t-options='{"format": "MM/dd/yyyy"}'/>
+                            <span class="m-0" t-field="doc.date_order"
+                                  t-options="{&quot;format&quot;: &quot;MM/dd/yyyy&quot;}"/>
                             <!--                            <br/>-->
                             <!--                            Due Date :-->
                             <!--                            <span class="m-0" t-field="o.invoice_date"/>-->
@@ -33,25 +36,29 @@
                 </div>
                 <br/>
                 <br/>
+                <br/>
                 <strong>Customer</strong>
                 <br/>
-                <span t-field="doc.partner_id"></span>
+                <span t-field="doc.partner_id"/>
                 <t t-if="doc.partner_id.street">
                     <br/>
-                    <span t-field="doc.partner_id.street"></span>
+                    <span t-field="doc.partner_id.street"/>
                 </t>
                 <t t-if="doc.partner_id.street2">
                     <br/>
-                    <span t-field="doc.partner_id.street2"></span>
+                    <span t-field="doc.partner_id.street2"/>
                 </t>
                 <t t-if="doc.partner_id.city">
                     <br/>
-                    <span t-field="doc.partner_id.city"></span>
+                    <span t-field="doc.partner_id.city"/>
                 </t>
                 <t t-if="doc.partner_id.state_id">
                     <br/>
-                    <span t-field="doc.partner_id.state_id.name"></span>
+                    <span t-field="doc.partner_id.state_id.name"/>
                 </t>
+                <br/>
+                <br/>
+                <br/>
                 <br/>
                 <br/>
                 <br/>
@@ -151,10 +158,14 @@
                 </table>
                 <br/>
                 <br/>
+                <br/>
+                <br/>
+                <br/>
                 <strong>Delivery Information</strong>
                 <div style="border: 3px solid black;"/>
                 <br/>
                 <br/>
+
                 <div class="row">
                     <div class="col-2">
                         <strong>Delivery Period</strong>
@@ -195,6 +206,9 @@
                     </div>
                 </div>
 
+                <br/>
+                <br/>
+                <br/>
                 <br/>
                 <br/>
                 <strong>Financial Information</strong>
@@ -267,6 +281,10 @@
                         </div>
                     </div>
                 </div>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
                 <br/>
                 <br/>
                 <br/>
