--- a/oe_kemexon_custom/report/pro-forma_invoice_template.xml
+++ b/oe_kemexon_custom/report/pro-forma_invoice_template.xml
@@ -4,6 +4,7 @@
         <xpath expr="//t[@t-call='web.external_layout']" position="replace">
             <t t-call="web.external_layout">
                 <t t-set="doc" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
+                <br/>
                 <div style="border: 2px solid black;"/>
                 <center>
                     <b style="font-size:35px;" class="text-center">PROFORMA INVOICE</b>
@@ -172,8 +173,8 @@
                     <div class="col-1"/>
                     <div class="col-3">
                         <t t-if="doc.picking_ids">
-                            <span class="m-0" t-field="doc.picking_ids.delivery_from"/>
-                            To
+                            <strong class="m-0" t-field="doc.picking_ids.delivery_from"/>
+                            -
                             <span class="m-0" t-field="doc.picking_ids.delivery_to"/>
 
                         </t>
@@ -231,7 +232,7 @@
                     <div class="col-1"/>
                     <div class="col-3">
                         <t t-if="doc.partner_id.bank_ids">
-                            <span class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id"/>
+                            <span style="text-align:left;" class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id"/>
                         </t>
                     </div>
                 </div>
@@ -241,10 +242,10 @@
                     </div>
                     <div class="col-2"/>
                     <div class="col-1">
-                        <span class="m-0" t-field="doc.payment_term_id"/>
+                        <span style="text-align:left;" class="m-0" t-field="doc.payment_term_id"/>
                     </div>
                     <div class="col-2"/>
-                    <div class="col-7">
+                    <div class="col-6">
                         <div class="row">
                             <div class="col-4">
                                 <strong>In favour of</strong>
@@ -252,7 +253,7 @@
                             <div class="col-2"/>
                             <div class="col-6">
                                 <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].acc_holder_name"/>
+                                    <span style="text-align:left;" class="m-0" t-field="doc.partner_id.bank_ids[0].acc_holder_name"/>
                                 </t>
                             </div>
                         </div>
@@ -263,7 +264,7 @@
                             <div class="col-2"/>
                             <div class="col-6">
                                 <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].acc_number"/>
+                                    <span style="text-align:left;" class="m-0" t-field="doc.partner_id.bank_ids[0].acc_number"/>
                                 </t>
                             </div>
                         </div>
@@ -272,9 +273,31 @@
                                 <strong>Swift Code</strong>
                             </div>
                             <div class="col-2"/>
+                            <div class="col-6" style="text-align:left;">
+                                <t t-if="doc.partner_id.bank_ids">
+                                    <span  class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id.bic"/>
+                                </t>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <strong>Inter Mediatory Bank</strong>
+                            </div>
+                            <div class="col-2"/>
                             <div class="col-6">
                                 <t t-if="doc.partner_id.bank_ids">
-                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].bank_id.bic"/>
+                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].inter_mediatory_bank_id"/>
+                                </t>
+                            </div>
+                        </div>
+                         <div class="row">
+                            <div class="col-4">
+                                <strong>Inter Mediatory Swift</strong>
+                            </div>
+                            <div class="col-2"/>
+                            <div class="col-6">
+                                <t t-if="doc.partner_id.bank_ids">
+                                    <span class="m-0" t-field="doc.partner_id.bank_ids[0].inter_mediatory_swift"/>
                                 </t>
                             </div>
                         </div>
